@@ -5,6 +5,9 @@
 
 	* src/modules/sshcmd.c : Change setenv() to putenv() for portability.
 
+	* src/modules/sshcmd.c : Remove sshcmdr() which is now identical
+	  to sshcmdrw().
+
 2005-08-02  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/dsh.c, src/pdsh/pcp_server.c : Remove debug code for pdcp 
